--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 </head>
 
 <body>
-
+<div id="music-slider">
 <header>
   <img class="img-logo" src="assets/OSA KHOIRUZZAD.png" alt="Osa Khoiruzzad">
 </header>
-
+<div class="desc-header">
+  UI/UX Designer and Artworker
+</div>
 <nav>
   <a href="#arts" class="link arts">Arts</a>
   <a href="#works" class="link works">Works</a>
@@ -34,17 +36,18 @@
   © 2026 Osa Khoiruzzad — Powered by Myself, GitHub.io and also ChatGPT ofc.
 </footer>
 
-<!-- CONTACT MODAL -->
 <div id="contactModal" class="modal">
   <div class="modal-content">
     <span class="close" onclick="closeContact()">×</span>
-
+    <div>
+      <h4 style="text-align: center;">Contact Us</h4>
+    </div>
     <a class="contact-btn" href="https://wa.me/6282337251492" target="_blank">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/whatsapp.svg">
       WhatsApp
     </a>
 
-    <a class="contact-btn" href="mailto:emailanda@gmail.com">
+    <a class="contact-btn" href="mailto:khoiruzzad72@gmail.com">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/gmail.svg">
       E-mail
     </a>
