--- a/pages/arts.html
+++ b/pages/arts.html
@@ -5,8 +5,8 @@
 
     <!-- CONTROLS -->
     <div class="art-controls">
-      <button id="btnPrev" onclick="prevArt()" aria-label="Previous">[ ↑ ]</button>
-      <button id="btnNext" onclick="nextArt()" aria-label="Next">[ ↓ ]</button>
+      <button id="btnPrev" onclick="prevArt()" aria-label="Previous">[UP]</button>
+      <button id="btnNext" onclick="nextArt()" aria-label="Next">[DN]</button>
     </div>
   </div>
 
