--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <img class="img-logo" src="assets/OSA KHOIRUZZAD.png" alt="Osa Khoiruzzad">
 </header>
 <div class="desc-header">
-  UI/UX Designer and Artworker
+  UI/UX Designer - Artworker - Web Designer
 </div>
 <nav>
-  <a href="#arts" class="link arts">Arts</a>
+  <a href="#arts" class="link arts">Posters and Arts</a>
   <a href="#works" class="link works">Works</a>
   <button class="link contact" id="contactTrigger">Contact Us</button>
 </nav>
