--- a/pages/arts.html
+++ b/pages/arts.html
@@ -1,7 +1,7 @@
 <div class="art-wrapper">
 
   <div class="art-viewer">
-    <img id="artImage" src="assets/art1.png" alt="Artwork">
+    <img id="artImage" src="assets/art1.jpg" alt="Artwork">
 
     <!-- CONTROLS -->
     <div class="art-controls">
