--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 </head>
 
 <body>
-<div id="music-slider">
+
+<div id="opening">
+  <div id="opening-text"></div>
+</div>
+
+<div id="page-transition"></div>
+
 <header>
   <img class="img-logo" src="assets/OSA KHOIRUZZAD.png" alt="Osa Khoiruzzad">
 </header>
@@ -24,8 +30,8 @@
 
 </div>
 <nav>
-  <a href="#arts" class="link arts">Posters and Arts</a>
   <a href="#works" class="link works">Works</a>
+  <a href="#arts" class="link arts">Posters and Arts</a>
   <button class="link contact" id="contactTrigger">Contact Us</button>
 </nav>
 
@@ -41,7 +47,7 @@
   <div class="modal-content">
     <span class="close" onclick="closeContact()">×</span>
     <div>
-      <h4 style="text-align: center;">Contact Us</h4>
+      <p class="uscontact">Contact Us Here:</p>
     </div>
     <a class="contact-btn" href="https://wa.me/6282337251492" target="_blank">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/whatsapp.svg">
