--- a/pages/arts.html
+++ b/pages/arts.html
@@ -1,19 +1,18 @@
 <div class="art-wrapper">
 
-  <div class="art-viewer">
+  <div class="art-viewer mono-frame">
     <img id="artImage" src="assets/art1.jpg" alt="Artwork">
 
-    <!-- CONTROLS -->
-    <div class="art-controls">
-      <button id="btnPrev" onclick="prevArt()" aria-label="Previous">[UP]</button>
-      <button id="btnNext" onclick="nextArt()" aria-label="Next">[DN]</button>
+    <div class="art-controls mono-controls">
+      <button id="btnPrev" aria-label="Previous">↑</button>
+      <button id="btnNext" aria-label="Next">↓</button>
     </div>
   </div>
 
-  <div class="art-desc">
+  <div class="art-desc mono-desc">
     <h3 id="artTitle">Sanity</h3>
+    <div class="mono-line"></div>
     <p id="artDesc">Desc</p>
   </div>
 
 </div>
-
