--- a/pages/works.html
+++ b/pages/works.html
@@ -1,4 +1,49 @@
-<div class="works-container">
-    <div class="work-card">Re-Design Website</div>
-    <div class="work-card">Misc. Project</div>
+<div class="works-grid">
+
+  <div class="work-card">
+    <div class="work-image">
+      <img src="assets/works1.png" alt="Project 1">
+    </div>
+    <h3 class="work-title">Matrix Website Redesign</h3>
+    <p class="work-desc">
+      To fulfill the requirements of our final thesis project, our group decided to redesign the Matrix NAP Info Lintas Nusa website page. The original page can be accessed at <a href="www.napinfo.co.id">www.napinfo.co.id.</a> The redesign was conducted based on UX research using the UEQ tool, and the final results can be accessed via the button below.
+    </p>
+    <a href="https://www.figma.com/proto/x9elnFg1mlEZzuXi2tiDJV/Portfolios?page-id=0%3A1&node-id=1-347&p=f&viewport=93%2C60%2C0.12&t=p6duZMdpX5mBqZnD-1&scaling=min-zoom&content-scaling=fixed
+
+" target="_blank" class="work-btn">Go to File</a>
+  </div>
+
+  <div class="work-card">
+    <div class="work-image">
+      <img src="assets/works2.png" alt="Project 2">
+    </div>
+    <h3 class="work-title">MindClear App</h3>
+    <p class="work-desc">
+      MindClear is an application concept specifically designed for people who feel they have mental and psychological issues. The MindClear app helps users overcome psychological problems through consultations with psychologists and psychiatrists, as well as by sharing experiences with other users in the provided forum.
+    </p>
+    <a href="https://www.figma.com/proto/55Cg5JRZdFUhM3ige5taym/MindClear?page-id=0%3A1&node-id=38-184&viewport=15%2C12%2C0.13&t=IGBPVDN59GCZejbw-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=16%3A76" target="_blank" class="work-btn">Go to File</a>
+  </div>
+
+  <div class="work-card">
+    <div class="work-image">
+      <img src="assets/works3.png" alt="Project 3">
+    </div>
+    <h3 class="work-title">Personal Website Design Idea</h3>
+    <p class="work-desc">
+      This website concept was specifically created for our online brand platform, “Opsimorph.” We provide merchandise in the form of clothing, art prints, and phone cases.
+    </p>
+    <a href="https://www.figma.com/proto/m7PK75rsLwSY2cpOJXt5N7/Titled?page-id=127%3A2&node-id=476-38&p=f&viewport=356%2C117%2C0.05&t=SgL2jwlioRJFahcz-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=476%3A38" target="_blank" class="work-btn">Go to File</a>
+  </div>
+
+  <div class="work-card">
+    <div class="work-image">
+      <img src="assets/works4.png" alt="Project 4">
+    </div>
+    <h3 class="work-title">Setara Studio 2025 Catalog</h3>
+    <p class="work-desc">
+      The 2025 catalog for Setara Photography Studio (@setara.studio). It contains information about the pricing of the services offered.
+    </p>
+    <a href="https://drive.google.com/file/d/1v_ja4RiK0hQzql6xu27RjLX7nytQHMy_/view?usp=sharing" target="_blank" class="work-btn">Go to File</a>
+  </div>
+
 </div>
