--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 <div id="page-transition"></div>
 
 <header>
-  <img class="img-logo" src="assets/OSA KHOIRUZZAD.png" alt="Osa Khoiruzzad">
+  <img class="img-logo" src="assets/OSA KHOIRUZZAD.png">
 </header>
 <div class="desc-header">
-  UI/UX Designer - Artworker - Web Designer
+  UI/UX Designer - Artworker
 
 </div>
 <nav>
   <a href="#works" class="link works">Works</a>
   <a href="#arts" class="link arts">Posters and Arts</a>
-  <button class="link contact" id="contactTrigger">Contact Us</button>
+  <a href="#contact" class="link contact" id="contactTrigger">Contact Us</a>
 </nav>
 
 <main id="content">
